--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-      crossorigin="anonymous"
-      integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY="
-    />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,8 +18,8 @@
     <title>Back to school 🤢</title>
   </head>
   <body>
-    <h1>🫣 B2S Embedding 🫣</h1>
     <div class="main-body">
+      <h1>🫣 B2S Embedding 🫣</h1>
       <div class="buttons">
         <div class="exportButtons">
           <button id="exportPDF">Export PDF</button>
@@ -40,9 +35,6 @@
       </div>
 
       <!-- This is where we will put the dashy -->
-      <hr />
-      <h2>Filters</h2>
-
       <div id="embedViz">
         <script src="app.js" defer></script>
       </div>
